[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cache"
version = "0.1.0"
description = "Local caching layer for LLM API responses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = [
    "flask>=2.0",
    "requests>=2.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
llm-cache = "llm_cache.cli:main"

[project.urls]
Homepage = "https://github.com/cognitioncommons/llm-cache"
Repository = "https://github.com/cognitioncommons/llm-cache"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_cache*"]
